<resources>
    <string name="app_name">京东阅读</string>
    <string name="you_are_what_you_read">You are what you read</string>
    <string name="back_exit_warning">再按一次退出程序</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty_string"></string>
    <string name="book_comment">评论</string>
    <string name="remove">移除</string>
    <string name="download">下载</string>
    <string name="book_store">书城</string>
    <string name="book_case">书架</string>
    <string name="community">社区</string>
    <string name="timeline">动态</string>
    <string name="me">我</string>
    <string name="email">电子邮件</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="nickname">昵称</string>
    <string name="register">注册</string>
    <string name="unknown_error">未知网络错误，请稍后重试！</string>
    <string name="logging_in">登录中，请稍后……</string>
    <string name="back">返回</string>
    <string name="edit">编辑</string>
    <string name="go_on">继续</string>
    <string name="note_line">划线</string>
    <string name="dictionary_and_baike">词典百科</string>
    <string name="baike">百度百科</string>
    <string name="youdao">有道词典</string>
    <string name="iciba">金山词霸</string>
    <string name="dictionnary_support">金山词霸技术支持</string>
    <string name="dictionnary_download_text">下载-汉英·英汉·汉汉词典</string>
    <string name="progress_sync_alert">是否同步到云端阅读进度：</string>
    <string name="progress_continue_alert">是否继续上次的阅读进度？</string>
    <string name="download_error">下载失败</string>
    <string name="free">免费</string>
    <string name="can_buy">书城有售</string>
    <string name="can_borrow">可借阅</string>
    <string name="borrow">借阅</string>
    <string name="string_placeholder">Lorem ipsum dolor</string>
    <string name="read_finish">阅读结束</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="second">秒</string>
    <string name="purchase_full_book_indicator">试读结束，更多精彩尽在完整版。</string>
    <string name="purchase_full_book">购买完整版</string>
    <string name="purchase">购买</string>
    <string name="rating_please">轻按评分</string>
	<string name="no_comment">暂无书评</string>
    <string name="time_placehold">--</string>
    <string name="waiting">请稍候…</string>
    <string name="find_new_version">发现新版本（%s）</string>
    <string name="current_version">当前版本（%s）\n\n</string>
    <string name="no_upgrade">已经是最新版本</string>
    <string name="book_home">图书主页</string>
    <string name="settings">设置</string>
    <string name="settings_more">高级阅读设置</string>
    <string name="adjust_layout">调整文字排版间距</string>
    <string name="settings_read_section">阅读设置</string>
    <string name="settings_account_section">帐号信息设置</string>
    <string name="settings_other_section">其他</string>
    <string name="soft_render">文字效果优先</string>
    <string name="third_party">第三方</string>
    <string name="font_zoom">文字</string>
    <string name="cover">cover</string>
    <string name="book_downloading">正在下载</string>
    <string name="start_download">开始下载</string>
    <string name="download_finish">下载完成</string>
    <string name="to_3rd_bookcase">-&gt;本地</string>
    <string name="update">更新</string>
    <string name="deny">拒绝</string>
    <string name="copy">复制</string>
    <string name="share">分享</string>
    <string name="share_success">恭喜客官，已成功分享到社区</string>
    <string name="cancel_share_success">已取消分享</string>
    <string name="share_to_timeline">分享到动态</string>
    <string name="share_to_mzread">同时分享到社区</string>
    <string name="note_private_to_jdreader">设为私密</string>
    <string name="note_public_to_jdreader">京东阅读</string>
    <string name="note_share_to_weibo">新浪微博</string>
    <string name="note_share_to_wxfriend">微信好友</string>
    <string name="note_share_to_wechat">微信朋友圈</string>
    <string name="can_open_by_mzread">可用最新版拇指阅读客户端打开。</string>
    <string name="file_read_fail">图书文件出错</string>
    <string name="notification">消息</string>
    <string name="my_profile">我的主页</string>
    <string name="user_profile">个人主页</string>
    <string name="user_profile_tv">我的书评、笔记、收藏</string>
    <string name="drafts">草稿箱</string>
    <string name="recommend">推荐</string>
    <string name="mypurchase">已购</string>
    <string name="mychangdu">畅读</string>
    <string name="publisher">出版方</string>
    <string name="all_audio">本书所有曲目</string>
    <string name="download_notify_title">是否下载</string>
    <string name="download_notify">该曲目需要下载才能播放，是否现在立刻下载？（下载完成将自动开始播放）</string>
    <string name="open_in_browser">浏览器中打开</string>
    <string name="reading_data">阅历</string>
    <string name="reading_code">阅读记录</string>
    <string name="justnow">刚刚</string>
    <string name="seconds_ago">秒前</string>
    <string name="minutes_ago">分钟前</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="delete_timeline">该动态已删除</string>
    <string name="loading_fail">加载失败，网络无连接</string>
    <string name="favourite">收藏</string>
    <string name="forward">转发</string>
    <string name="forward_info">转发动态</string>
    <string name="timeline_post_title">发布新动态</string>
    <string name="reply">回复</string>
    <string name="timeline_comment_reply">回复</string>
    <string name="timeline_comment_forward_btw">同时转发到我的动态</string>
    <string name="timeline_comment_comment_btw">同时评论</string>
    <string name="timeline_booklist_only_myself">只允许自己添加图书</string>
    <string name="timeline_booklist_hint">通过发起书单，你既可以向大家提问求推荐图书，也可以分享一个自己喜欢的列表。首先，你需要有一个明确的主题，比如：学习哲学有哪些入门读物值得推荐？</string>
    <string name="timeline_post_tweet">说说</string>
    <string name="timeline_at">\@</string>
    <string name="timeline_thumbnail">用户头像</string>
    <string name="user_follow">关注</string>
    <string name="follow_each_other">互相关注</string>
    <string name="user_fans">粉丝</string>
    <string name="user_more">更多资料</string>
    <string name="user_all_timeline">全部动态</string>
    <string name="user_book_comment">书评</string>
    <string name="user_note">笔记</string>
    <string name="user_book_buy">书城购买</string>
    <string name="user_book_import">外部导入</string>
    <string name="user_read_done">已读</string>
    <string name="user_read_want">喜欢</string>
    <string name="user_follow_done">已关注</string>
    <string name="user_follow_not">加关注</string>
    <string name="user_modify">修改个人资料</string>
    <string name="user_no_more">没有更多内容了</string>
    <string name="delete_entity">删除动态</string>
    <string name="delete_comment">删除评论</string>
    <string name="delete_entity_confirm">确定删除这条动态吗</string>
    <string name="delete_comment_confirm">确定删除这条评论吗</string>
    <string name="delete_note_confirm">确认删除这条笔记吗</string>
    <string name="post_without_word">请至少输入一个字符</string>
    <string name="max_entity_text">字数太多了，单条动态不能超过60000字滴</string>
    <string name="max_comment_text">字数太多了，单条动态不能超过3000字滴</string>
    <string name="user_not_found">不存在此用户</string>
    <string name="find_friends">查找好友</string>
    <string name="search">搜索</string>
    <string name="user">用户</string>
    <string name="follow_all">全部关注</string>
    <string name="recommand_user">推荐用户</string>
    <string name="sina_error">新浪微博登录失败，请重新登录</string>
    <string name="next">下一步</string>
    <string name="finish">完成</string>
    <string name="followed_user_book_not_exist">关注的人没有正在读的书籍</string>
    <string name="followed_user_reading">你关注的人正在读</string>
    <string name="follow_all_success">成功关注了所有用户</string>
    <string name="follow_all_fail">全部关注失败</string>
    <string name="followers_list_title">粉丝列表</string>
    <string name="followings_list_title">关注列表</string>
    <string name="sex">性别</string>
    <string name="introduction">介绍</string>
    <string name="email_english">Email</string>
    <string name="blog">博客</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="user_modify_summary">一句话介绍自己 (比如：railsgirl/吃货)</string>
    <string name="user_modify_email">联系邮箱</string>
    <string-array name="change_thumbnail">
        <item>拍照</item>
        <item>选择本地图片</item>
    </string-array>
    <string name="no_camera">找不到相机应用</string>
    <string name="no_image_chooser">找不到图片资源管理器</string>
    <string name="no_user_name">用户名不能为空，请重新输入</string>
    <string name="updating">正在更新个人资料</string>
    <string name="updating_fail">修改失败，请重试</string>
    <string name="make_public">设为公开并分享到社区</string>
    <string name="make_private">设为不公开</string>
    <string name="is_private">未公开</string>
    <string name="deleting">正在删除</string>
    <string name="clear_cache">清除动态缓存</string>
    <string name="clear_cache_done">缓存已清除</string>
    <string name="write_message">写私信</string>
    <string name="confirm_bookname">确定正在阅读的图书</string>
    <string name="cannot_find_bookname">搜索找不到合适的书？也可以手工输入书名</string>
    <string name="private_message">私信</string>
    <string name="private_message_sending">私信发送中...</string>
    <string name="private_message_send_fail">发送失败</string>
    <string name="send">发送</string>
    <string name="delete_conversation">删除对话</string>
    <string name="delete_conversation_confirm">你确认删除这条对话么，删除后将不可恢复。</string>
    <string name="borrowing">正在借阅图书中，请稍候</string>
    <string name="confirm_dialog_title">请输入书籍的名称</string>
    <string name="confirm_dialog_ok">本地书籍绑定成功了</string>
    <string name="rebind_book_button">重新确定</string>
    <string name="rebind_book_title">确定本书信息</string>
    <string name="upload_book">一键上传</string>
    <string name="upload_localbook">上传图书</string>
    <string name="accept">同意</string>
    <string name="waiting_accept">等待同意</string>
    <string name="accepted">已同意</string>
    <string name="click_download">点击下载</string>
    <string name="reject">已拒绝</string>
    <string name="rejected">已被拒绝</string>
    <string name="hide">设为隐藏</string>
    <string name="unhide">设为公开</string>
    <string name="ishide">已隐藏</string>
    <string name="books_selected">精选</string>
    <string name="upload_book_msg">建议在Wi-Fi环境下上传图书</string>
    <string name="upload_not_find_synbook_msg">本地没有需要上传的图书文件</string>
    <string name="upload_find_synbook_msg">本地有%d本需要上传的图书文件</string>
    <string name="uploaded">已上传</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="find_ebook">1、如何找到自己喜欢的电子书刊？</string>
    <string name="find_ebook_content">您可以通过我们的推荐选择自己喜欢的商品，也可以通过搜索功能找到自己喜欢的商品。</string>
    <string name="hwo_to_buy_ebook">2、如何加入购物车进行批量购买？</string>
    <string name="hwo_to_buy_ebook_content">答：当您选好喜欢的电子书刊后，点击“加入购物车”即可；当您选好所有的商品后，可在“我的京东”-“购物车”中结算。</string>
    <string name="pay_ebook">3、电子书刊有哪些支付方式？</string>
    <string name="pay_ebook_content">答：电子书刊是虚拟商品，需要通过在线支付方式进行支付，不支持货到付款。在线支付方式包括：礼品卡、信用卡快捷支付、余额、网银在线支付、京/东券。</string>
    <string name="download_ebook">4、电子书刊订单“支付完成”后，如何进行下载？</string>
    <string name="download_ebook_content">答：在支付完成后，您在“书架-已购”里可以找到该书。</string>
    <string name="download_ebook_divice">5、一本电子书刊支持多少台设备下载，每个设备可以下载多少次？</string>
    <string name="download_ebook_divice_content">答：一本电子书刊最多支持10个不同的设备进行下载，每台设备可多次下载，次数没有限制。</string>
    <string name="order_ebook">6、订单提交后多长时间内需要支付？</string>
    <string name="order_ebook_content">答：请您在订单提交成功后24小时之内付款完毕，否则订单将被自动取消。</string>
    <string name="hwoto_return_ebook">7、如何进行退货或换货？</string>
    <string name="hwoto_return_ebook_content">答：由于电子书刊商品的特殊性，只要支付完成，不支持退货或换货服务。如果您提交订单，支付未成功，不会扣除您任何费用。</string>
    <string name="delete_ebook">8、软件升级或重复安装后本地的书会不会被删除？</string>
    <string name="printf_info">9、电子书支持“打印”吗？</string>
    <string name="printf_info_answer">答：不支持。出版社处于保护作者的著作权，不允许打印，我们也没开发这个功能。</string>
    <string name="copy_info">10、电子书，用户可以“复制”书中文字或者“拷贝”到其他设备上自由阅读吗？</string>
    <string name="copy_info_answer">答：出版社为了保护作者的权利，只允许“复制”部分文字。电子书是加密的，“拷贝”到其他设备上，将无法正常阅读。</string>
    <string name="delete_ebook_content">答：已经下载的电子书和导入的电子书不会被删除。</string>
    <string name="contact_costomer">联系客服</string>
    <string name="costomer_center">京东全国客服中心电话：</string>
    <string name="costomer_center_contetnt">400-606-5500（7x24小时全天候服务。未开通400服务地区的客户请拨打0527-88105500或者0527-88120410)</string>
    <string name="category">分类</string>
</resources>