<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tab_layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/wSize40"
    android:background="@color/bg_main"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/wSize30"
        android:baselineAligned="false"
        android:orientation="horizontal"
        tools:ignore="ButtonStyle" >

        <Button
            android:id="@+id/tabButton0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/recommend"
            android:textColor="#000000"
            android:textSize="14dp" />

        <Button
            android:id="@+id/tabButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/category"
            android:textColor="#000000"
            android:textSize="14dp" />

        <Button
            android:id="@+id/tabButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/free"
            android:textColor="#000000"
            android:textSize="14dp" />

        <Button
            android:id="@+id/tabButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/publisher"
            android:textColor="#000000"
            android:textSize="14dp" />

        <Button
            android:id="@+id/tabButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/third_party"
            android:textColor="#000000"
            android:textSize="14dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/item_dot"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/wSize5"
        android:layout_marginBottom="@dimen/custom_top_bar_menu_item_text_dot_margin"
        android:background="@drawable/red_dot" />

</LinearLayout>